# dbrelay

./: .gitignore  .gitmodules  AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  autogen.sh  build  configure  configure.ac
contrib/: init  monitor  package  viaduct_init
contrib/logos/: dbrelay.graffle  dbrelay.icns
doc/: viaduct_architecture.graffle  viaduct_specification.html
html/: Makefile.am  Makefile.in  admin-dev.htm  admin.htm  example.html  index-dev.htm  index-dev.html  index.htm  index.html  oldindex.html  status.html
html/css/: dbrelay.css  viaadmin.css
html/dbrelay/: index-dev.html  index.html  oldindex.html  status.html
html/dbrelay/css/: dbrelay.css
html/dbrelay/docs/: SQL_query_interface.html  architecture.html  architecture_freetds.html  architecture_odbc.html  architecture_overview.html  dbrelay_specification.html  doc.css  environment.html  example.html  features.html  index.html  interaction.html  interfaces.html  jsapi-sqldbaccess.html  jsapi-sqlobject.html  jsapi-sqltable.html  license.html  nav.html  overview.html  sql_query.html  viaduct_specification.html
html/dbrelay/docs/jsapi/: welcome.html
html/dbrelay/docs/jsapi/output/: DbRelay.QueryHelper.html  DbRelay.TableHelper.html  DbRelay.adapters.BaseAdapter.html  DbRelay.adapters.SqlServer.html  DbRelay.html  tree.js
html/dbrelay/docs/jsapi/source/: sqlDbAccess.html  sqlObject.html  sqlTable.html
html/dbrelay/eg/: dbrelay_interactive_xss.html  inlinetable_example.html  python_example.html
html/dbrelay/js/: dbrelay-core-min.js  dbrelay-ui-all-min.js  dbrelay-ui-sqlresultpanel-min.js  dbrelay-ui-sqltableeditor-min.js
html/dbrelay/js/ext-3.2.1/resources/: resources.jsb
html/dbrelay/js/src/: sqlDbAccess.js  sqlObject.js  sqlTable.js
html/dbrelay/js/src/ui/: App.js  Chart.js  ConnectionWindow.js  CreateTableWindow.js  SqlResultPanel.js  SqlSelectGrid.js  SqlTableEditor.js  StatusWindow.js  Util.js
html/dbrelay/plugins/: README.txt
html/dbrelay/tablesorter/: style.css
html/doc/: doc.css  example.html  features.html  index.htm  index.html  interaction.htm  interfaces.htm  interfaces.html  jsapi-sqldbaccess.htm  jsapi-sqldbaccess.html  jsapi-sqlobject.html  jsapi-sqltable.htm  nav.htm  nav.html  overview.htm  viaduct_specification.html
html/docs/: index.html
html/eg/: Python_access.html  inlinetable_example.htm  inlinetable_example.html  python_example.html
html/js/: .gitignore  dbrelay-core-min.js  dbrelay-ui-all-min.js  dbrelay-ui-sqlresultpanel-min.js  dbrelay-ui-sqltableeditor-min.js  jquery-ui-1.5.2.pack.js  sqlDbAccess.js  sqlObject.js  viaadmin-all-min.js  viaadmin-sqlresultpanel-min.js  viaadmin-sqltableeditor-min.js  viacore-min.js
html/js/src/: sqlDbAccess.js  sqlObject.js  sqlTable.js
html/js/src/ui/: App.js  ConnectionWindow.js  CreateTableWindow.js  SqlResultPanel.js  SqlSelectGrid.js  SqlTableEditor.js  StatusWindow.js
html/js/src/viaadmin/: App.js  ConnectionWindow.js  CreateTableWindow.js  MultiSelect.js  SqlResultPanel.js  SqlSelectGrid.js  SqlTableEditor.js
html/viaadmin/: index.htm  table_example.htm
html/viaadmin/js/va/: App.js  SqlResultPanel.js  SqlTableEditor.js  SqlTableEditor_backup.js
html/viaplot/: date.js  ex1.json  ex2.json  index.html  index_home.js  jquery.viaplot.js  styles.css
jsdocgen/: config.xml  jsdocgen.bat
jsdocgen/template/: index.html
patches/: conffile.patch  freetds.patch  index.html  nginx.conf.patch  nginx.makefile.patch  nginx.wrapper.patch  wrapper.patch
src/: Makefile.am  Makefile.in  freetds-0.82.tgz
src/freetds-0.82/: ChangeLog  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  freetds.spec  ltmain.sh
src/freetds-0.82/doc/: Makefile.am  Makefile.in  bsqldb.1  bsqlodbc.1  datacopy.1  defncopy.1  fisql.1  freebcp.1  osql.1  tsql.1  userguide.sgml
src/freetds-0.82/include/: Makefile.in  config.h.in  cstypes.h  tds_sysdep_private.h  tds_sysdep_public.h.in  tdsodbc.h  tdsver.h
src/freetds-0.82/samples/: Makefile.in
src/freetds-0.82/src/: Makefile.in
src/freetds-0.82/src/apps/: Makefile.am  Makefile.in  bsqlodbc.c  tsql.c
src/freetds-0.82/src/apps/fisql/: Makefile.in
src/freetds-0.82/src/ctlib/: Makefile.in  ct.c
src/freetds-0.82/src/ctlib/unittests/: Makefile.in  cancel.c
src/freetds-0.82/src/dblib/: Makefile.in  dblib.c
src/freetds-0.82/src/odbc/: Makefile.in  convert_tds2sql.c  odbc.c  odbc_util.c
src/freetds-0.82/src/pool/: Makefile.in
src/freetds-0.82/src/replacements/: Makefile.in
src/freetds-0.82/src/server/: Makefile.in
src/freetds-0.82/src/tds/: Makefile.in  convert.c  encodings.h  net.c  query.c  tds_willconvert.h  token.c
src/freetds-0.82/vms/: configure.com
src/freetds-0.82/win32/: Makefile.in  freetds.nsh  tds_sysdep_public.h  version.rc
src/freetds-0.82/win32/dev-cpp/: Makefile.in
src/freetds-0.82/win32/msvc6/: Makefile.in
src/nginx-0.7.22/: Makefile
src/nginx-0.7.22/conf/: internal.conf
src/nginx-0.7.22/objs/: Makefile  autoconf.err  nginx  ngx_auto_config.h  ngx_auto_headers.h  ngx_modules.c
src/nginx-0.7.22/src/core/: ngx_conf_file.c  ngx_conf_file.h  ngx_default_conf.h  ngx_default_conf.h.in
src/ngx_http_viaduct/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  client.c  config  config.in  configure  configure.ac  connector.c  db.c  json.c  json.h  log.c  main.c  mssql.c  mssql.h  mysql.c  ngx_http_viaduct_module.c  shmem.c  stringbuf.c  stringbuf.h  viaduct.h
src/ngx_http_viaduct/include/: .gitignore  Makefile.am  Makefile.in  config.h.in
src/ngx_http_viaduct/src/: .gitignore  Makefile.am  Makefile.in  admin.c  client.c  config.in  connector.c  db.c  json.c  json.h  log.c  main.c  mssql.c  mssql.h  mysql.c  ngx_http_viaduct_module.c  odbc.c  shmem.c  socket.c  stringbuf.c  viaduct.h  vmysql.h  vodbc.h
src/ngx_http_viaduct/unittest/: example.html  telnet.py  test.sh  test1.js  test1.sql  test2.js  test2.sql  test3.js  test3.sql  test4.js  test4.sql  test5.js  test5.sql  test6.js  test6.sql  testall.sh  unittest.sh
util/: .gitignore  Makefile.am  Makefile.in
(+303 files in other folders)
