htmldir = $(prefix)/html

JSMIN=../util/jsmin
JSSRC=js/src

all: js/dbrelay-core-min.js js/dbrelay-ui-all-min.js js/dbrelay-ui-sqltableeditor-min.js js/dbrelay-ui-sqlresultpanel-min.js 

js/dbrelay-core-min.js: $(JSSRC)/sqlObject.js $(JSSRC)/sqlDbAccess.js $(JSSRC)/sqlTable.js
	$(JSMIN) < $? > $@

js/dbrelay-ui-all-min.js: $(JSSRC)/ui/ConnectionWindow.js $(JSSRC)/ui/CreateTableWindow.js $(JSSRC)/ui/SqlTableEditor.js $(JSSRC)/ui/SqlSelectGrid.js $(JSSRC)/ui/SqlResultPanel.js $(JSSRC)/ui/App.js
	$(JSMIN) < $? > $@

js/dbrelay-ui-sqltableeditor-min.js: $(JSSRC)/ui/SqlTableEditor.js
	$(JSMIN) < $? > $@

js/dbrelay-ui-sqlresultpanel-min.js: $(JSSRC)/ui/SqlSelectGrid.js $(JSSRC)/ui/SqlResultPanel.js
	$(JSMIN) < $? > $@


FILES = ./index.html \
./50x.html \
./index-dev.html \
./status.html \
./oldindex.html \
css/viaadmin.css \
doc/doc.css \
doc/environment.html \
doc/example.html \
doc/features.html \
doc/index.html \
doc/interaction.html \
doc/interfaces.html \
doc/jsapi-sqldbaccess.html \
doc/jsapi-sqlobject.html \
doc/jsapi-sqltable.html \
doc/nav.html \
doc/overview.html \
doc/SQL_query_interface.html \
doc/viaduct_architecture.graffle \
doc/viaduct_architecture.pdf \
doc/viaduct_specification.html \
eg/inlinetable_example.html \
eg/python_example.html \
images/binocular.png \
images/chain.png \
images/control-180.png \
images/control-skip-180.png \
images/control-skip.png \
images/control.png \
images/cross-circle.png \
images/disk.png \
images/document-attribute-l.png \
images/document-globe.png \
images/document-list.png \
images/document-pdf-text.png \
images/folder-open-table.png \
images/gear.png \
images/home.png \
images/information.png \
images/monitor.png \
images/pencil.png \
images/plus-circle.png \
images/question.png \
images/refresh.gif \
images/script-attribute-s.png \
images/spinner.gif \
images/table.png \
images/tables.png \
images/tick.png \
js/ext-3.0.0/adapter/jquery/ext-jquery-adapter.js \
js/ext-3.0.0/ext-all.js \
js/ext-3.0.0/license.txt \
js/ext-3.0.0/resources/charts.swf \
js/ext-3.0.0/resources/css/ext-all-notheme.css \
js/ext-3.0.0/resources/css/ext-all.css \
js/ext-3.0.0/resources/css/README.txt \
js/ext-3.0.0/resources/css/reset-min.css \
js/ext-3.0.0/resources/css/structure/borders.css \
js/ext-3.0.0/resources/css/structure/box.css \
js/ext-3.0.0/resources/css/structure/button.css \
js/ext-3.0.0/resources/css/structure/combo.css \
js/ext-3.0.0/resources/css/structure/core.css \
js/ext-3.0.0/resources/css/structure/date-picker.css \
js/ext-3.0.0/resources/css/structure/dd.css \
js/ext-3.0.0/resources/css/structure/debug.css \
js/ext-3.0.0/resources/css/structure/dialog.css \
js/ext-3.0.0/resources/css/structure/editor.css \
js/ext-3.0.0/resources/css/structure/form.css \
js/ext-3.0.0/resources/css/structure/grid.css \
js/ext-3.0.0/resources/css/structure/layout.css \
js/ext-3.0.0/resources/css/structure/list-view.css \
js/ext-3.0.0/resources/css/structure/menu.css \
js/ext-3.0.0/resources/css/structure/panel-reset.css \
js/ext-3.0.0/resources/css/structure/panel.css \
js/ext-3.0.0/resources/css/structure/progress.css \
js/ext-3.0.0/resources/css/structure/qtips.css \
js/ext-3.0.0/resources/css/structure/reset.css \
js/ext-3.0.0/resources/css/structure/resizable.css \
js/ext-3.0.0/resources/css/structure/slider.css \
js/ext-3.0.0/resources/css/structure/tabs.css \
js/ext-3.0.0/resources/css/structure/toolbar.css \
js/ext-3.0.0/resources/css/structure/tree.css \
js/ext-3.0.0/resources/css/structure/window.css \
js/ext-3.0.0/resources/css/visual/borders.css \
js/ext-3.0.0/resources/css/visual/box.css \
js/ext-3.0.0/resources/css/visual/button.css \
js/ext-3.0.0/resources/css/visual/combo.css \
js/ext-3.0.0/resources/css/visual/core.css \
js/ext-3.0.0/resources/css/visual/date-picker.css \
js/ext-3.0.0/resources/css/visual/dd.css \
js/ext-3.0.0/resources/css/visual/debug.css \
js/ext-3.0.0/resources/css/visual/dialog.css \
js/ext-3.0.0/resources/css/visual/editor.css \
js/ext-3.0.0/resources/css/visual/form.css \
js/ext-3.0.0/resources/css/visual/grid.css \
js/ext-3.0.0/resources/css/visual/layout.css \
js/ext-3.0.0/resources/css/visual/list-view.css \
js/ext-3.0.0/resources/css/visual/menu.css \
js/ext-3.0.0/resources/css/visual/panel.css \
js/ext-3.0.0/resources/css/visual/progress.css \
js/ext-3.0.0/resources/css/visual/qtips.css \
js/ext-3.0.0/resources/css/visual/resizable.css \
js/ext-3.0.0/resources/css/visual/slider.css \
js/ext-3.0.0/resources/css/visual/tabs.css \
js/ext-3.0.0/resources/css/visual/toolbar.css \
js/ext-3.0.0/resources/css/visual/tree.css \
js/ext-3.0.0/resources/css/visual/window.css \
js/ext-3.0.0/resources/css/xtheme-blue.css \
js/ext-3.0.0/resources/expressinstall.swf \
js/ext-3.0.0/resources/images/default/box/corners-blue.gif \
js/ext-3.0.0/resources/images/default/box/corners.gif \
js/ext-3.0.0/resources/images/default/box/l-blue.gif \
js/ext-3.0.0/resources/images/default/box/l.gif \
js/ext-3.0.0/resources/images/default/box/r-blue.gif \
js/ext-3.0.0/resources/images/default/box/r.gif \
js/ext-3.0.0/resources/images/default/box/tb-blue.gif \
js/ext-3.0.0/resources/images/default/box/tb.gif \
js/ext-3.0.0/resources/images/default/button/arrow.gif \
js/ext-3.0.0/resources/images/default/button/btn.gif \
js/ext-3.0.0/resources/images/default/button/group-cs.gif \
js/ext-3.0.0/resources/images/default/button/group-lr.gif \
js/ext-3.0.0/resources/images/default/button/group-tb.gif \
js/ext-3.0.0/resources/images/default/button/s-arrow-b-noline.gif \
js/ext-3.0.0/resources/images/default/button/s-arrow-b.gif \
js/ext-3.0.0/resources/images/default/button/s-arrow-bo.gif \
js/ext-3.0.0/resources/images/default/button/s-arrow-noline.gif \
js/ext-3.0.0/resources/images/default/button/s-arrow-o.gif \
js/ext-3.0.0/resources/images/default/button/s-arrow.gif \
js/ext-3.0.0/resources/images/default/dd/drop-add.gif \
js/ext-3.0.0/resources/images/default/dd/drop-no.gif \
js/ext-3.0.0/resources/images/default/dd/drop-yes.gif \
js/ext-3.0.0/resources/images/default/editor/tb-sprite.gif \
js/ext-3.0.0/resources/images/default/form/checkbox.gif \
js/ext-3.0.0/resources/images/default/form/clear-trigger.gif \
js/ext-3.0.0/resources/images/default/form/clear-trigger.psd \
js/ext-3.0.0/resources/images/default/form/date-trigger.gif \
js/ext-3.0.0/resources/images/default/form/date-trigger.psd \
js/ext-3.0.0/resources/images/default/form/error-tip-corners.gif \
js/ext-3.0.0/resources/images/default/form/exclamation.gif \
js/ext-3.0.0/resources/images/default/form/radio.gif \
js/ext-3.0.0/resources/images/default/form/search-trigger.gif \
js/ext-3.0.0/resources/images/default/form/search-trigger.psd \
js/ext-3.0.0/resources/images/default/form/text-bg.gif \
js/ext-3.0.0/resources/images/default/form/trigger-tpl.gif \
js/ext-3.0.0/resources/images/default/form/trigger.gif \
js/ext-3.0.0/resources/images/default/form/trigger.psd \
js/ext-3.0.0/resources/images/default/gradient-bg.gif \
js/ext-3.0.0/resources/images/default/grid/arrow-left-white.gif \
js/ext-3.0.0/resources/images/default/grid/arrow-right-white.gif \
js/ext-3.0.0/resources/images/default/grid/col-move-bottom.gif \
js/ext-3.0.0/resources/images/default/grid/col-move-top.gif \
js/ext-3.0.0/resources/images/default/grid/columns.gif \
js/ext-3.0.0/resources/images/default/grid/dirty.gif \
js/ext-3.0.0/resources/images/default/grid/done.gif \
js/ext-3.0.0/resources/images/default/grid/drop-no.gif \
js/ext-3.0.0/resources/images/default/grid/drop-yes.gif \
js/ext-3.0.0/resources/images/default/grid/footer-bg.gif \
js/ext-3.0.0/resources/images/default/grid/grid-blue-hd.gif \
js/ext-3.0.0/resources/images/default/grid/grid-blue-split.gif \
js/ext-3.0.0/resources/images/default/grid/grid-hrow.gif \
js/ext-3.0.0/resources/images/default/grid/grid-loading.gif \
js/ext-3.0.0/resources/images/default/grid/grid-split.gif \
js/ext-3.0.0/resources/images/default/grid/grid-vista-hd.gif \
js/ext-3.0.0/resources/images/default/grid/grid3-hd-btn.gif \
js/ext-3.0.0/resources/images/default/grid/grid3-hrow-over.gif \
js/ext-3.0.0/resources/images/default/grid/grid3-hrow.gif \
js/ext-3.0.0/resources/images/default/grid/grid3-special-col-bg.gif \
js/ext-3.0.0/resources/images/default/grid/grid3-special-col-sel-bg.gif \
js/ext-3.0.0/resources/images/default/grid/group-by.gif \
js/ext-3.0.0/resources/images/default/grid/group-collapse.gif \
js/ext-3.0.0/resources/images/default/grid/group-expand-sprite.gif \
js/ext-3.0.0/resources/images/default/grid/group-expand.gif \
js/ext-3.0.0/resources/images/default/grid/hd-pop.gif \
js/ext-3.0.0/resources/images/default/grid/hmenu-asc.gif \
js/ext-3.0.0/resources/images/default/grid/hmenu-desc.gif \
js/ext-3.0.0/resources/images/default/grid/hmenu-lock.gif \
js/ext-3.0.0/resources/images/default/grid/hmenu-lock.png \
js/ext-3.0.0/resources/images/default/grid/hmenu-unlock.gif \
js/ext-3.0.0/resources/images/default/grid/hmenu-unlock.png \
js/ext-3.0.0/resources/images/default/grid/invalid_line.gif \
js/ext-3.0.0/resources/images/default/grid/loading.gif \
js/ext-3.0.0/resources/images/default/grid/mso-hd.gif \
js/ext-3.0.0/resources/images/default/grid/nowait.gif \
js/ext-3.0.0/resources/images/default/grid/page-first-disabled.gif \
js/ext-3.0.0/resources/images/default/grid/page-first.gif \
js/ext-3.0.0/resources/images/default/grid/page-last-disabled.gif \
js/ext-3.0.0/resources/images/default/grid/page-last.gif \
js/ext-3.0.0/resources/images/default/grid/page-next-disabled.gif \
js/ext-3.0.0/resources/images/default/grid/page-next.gif \
js/ext-3.0.0/resources/images/default/grid/page-prev-disabled.gif \
js/ext-3.0.0/resources/images/default/grid/page-prev.gif \
js/ext-3.0.0/resources/images/default/grid/pick-button.gif \
js/ext-3.0.0/resources/images/default/grid/refresh.gif \
js/ext-3.0.0/resources/images/default/grid/row-check-sprite.gif \
js/ext-3.0.0/resources/images/default/grid/row-expand-sprite.gif \
js/ext-3.0.0/resources/images/default/grid/row-over.gif \
js/ext-3.0.0/resources/images/default/grid/row-sel.gif \
js/ext-3.0.0/resources/images/default/grid/sort-hd.gif \
js/ext-3.0.0/resources/images/default/grid/sort_asc.gif \
js/ext-3.0.0/resources/images/default/grid/sort_desc.gif \
js/ext-3.0.0/resources/images/default/grid/wait.gif \
js/ext-3.0.0/resources/images/default/layout/collapse.gif \
js/ext-3.0.0/resources/images/default/layout/expand.gif \
js/ext-3.0.0/resources/images/default/layout/gradient-bg.gif \
js/ext-3.0.0/resources/images/default/layout/mini-bottom.gif \
js/ext-3.0.0/resources/images/default/layout/mini-left.gif \
js/ext-3.0.0/resources/images/default/layout/mini-right.gif \
js/ext-3.0.0/resources/images/default/layout/mini-top.gif \
js/ext-3.0.0/resources/images/default/layout/ns-collapse.gif \
js/ext-3.0.0/resources/images/default/layout/ns-expand.gif \
js/ext-3.0.0/resources/images/default/layout/panel-close.gif \
js/ext-3.0.0/resources/images/default/layout/panel-title-bg.gif \
js/ext-3.0.0/resources/images/default/layout/panel-title-light-bg.gif \
js/ext-3.0.0/resources/images/default/layout/stick.gif \
js/ext-3.0.0/resources/images/default/layout/stuck.gif \
js/ext-3.0.0/resources/images/default/layout/tab-close-on.gif \
js/ext-3.0.0/resources/images/default/layout/tab-close.gif \
js/ext-3.0.0/resources/images/default/menu/checked.gif \
js/ext-3.0.0/resources/images/default/menu/group-checked.gif \
js/ext-3.0.0/resources/images/default/menu/item-over.gif \
js/ext-3.0.0/resources/images/default/menu/menu-parent.gif \
js/ext-3.0.0/resources/images/default/menu/menu.gif \
js/ext-3.0.0/resources/images/default/menu/unchecked.gif \
js/ext-3.0.0/resources/images/default/panel/corners-sprite.gif \
js/ext-3.0.0/resources/images/default/panel/left-right.gif \
js/ext-3.0.0/resources/images/default/panel/light-hd.gif \
js/ext-3.0.0/resources/images/default/panel/tool-sprite-tpl.gif \
js/ext-3.0.0/resources/images/default/panel/tool-sprites.gif \
js/ext-3.0.0/resources/images/default/panel/tools-sprites-trans.gif \
js/ext-3.0.0/resources/images/default/panel/top-bottom.gif \
js/ext-3.0.0/resources/images/default/panel/top-bottom.png \
js/ext-3.0.0/resources/images/default/panel/white-corners-sprite.gif \
js/ext-3.0.0/resources/images/default/panel/white-left-right.gif \
js/ext-3.0.0/resources/images/default/panel/white-top-bottom.gif \
js/ext-3.0.0/resources/images/default/progress/progress-bg.gif \
js/ext-3.0.0/resources/images/default/qtip/bg.gif \
js/ext-3.0.0/resources/images/default/qtip/close.gif \
js/ext-3.0.0/resources/images/default/qtip/tip-anchor-sprite.gif \
js/ext-3.0.0/resources/images/default/qtip/tip-sprite.gif \
js/ext-3.0.0/resources/images/default/s.gif \
js/ext-3.0.0/resources/images/default/shadow-c.png \
js/ext-3.0.0/resources/images/default/shadow-lr.png \
js/ext-3.0.0/resources/images/default/shadow.png \
js/ext-3.0.0/resources/images/default/shared/blue-loading.gif \
js/ext-3.0.0/resources/images/default/shared/calendar.gif \
js/ext-3.0.0/resources/images/default/shared/glass-bg.gif \
js/ext-3.0.0/resources/images/default/shared/hd-sprite.gif \
js/ext-3.0.0/resources/images/default/shared/large-loading.gif \
js/ext-3.0.0/resources/images/default/shared/left-btn.gif \
js/ext-3.0.0/resources/images/default/shared/loading-balls.gif \
js/ext-3.0.0/resources/images/default/shared/right-btn.gif \
js/ext-3.0.0/resources/images/default/shared/warning.gif \
js/ext-3.0.0/resources/images/default/sizer/e-handle-dark.gif \
js/ext-3.0.0/resources/images/default/sizer/e-handle.gif \
js/ext-3.0.0/resources/images/default/sizer/ne-handle-dark.gif \
js/ext-3.0.0/resources/images/default/sizer/ne-handle.gif \
js/ext-3.0.0/resources/images/default/sizer/nw-handle-dark.gif \
js/ext-3.0.0/resources/images/default/sizer/nw-handle.gif \
js/ext-3.0.0/resources/images/default/sizer/s-handle-dark.gif \
js/ext-3.0.0/resources/images/default/sizer/s-handle.gif \
js/ext-3.0.0/resources/images/default/sizer/se-handle-dark.gif \
js/ext-3.0.0/resources/images/default/sizer/se-handle.gif \
js/ext-3.0.0/resources/images/default/sizer/square.gif \
js/ext-3.0.0/resources/images/default/sizer/sw-handle-dark.gif \
js/ext-3.0.0/resources/images/default/sizer/sw-handle.gif \
js/ext-3.0.0/resources/images/default/slider/slider-bg.png \
js/ext-3.0.0/resources/images/default/slider/slider-thumb.png \
js/ext-3.0.0/resources/images/default/slider/slider-v-bg.png \
js/ext-3.0.0/resources/images/default/slider/slider-v-thumb.png \
js/ext-3.0.0/resources/images/default/tabs/scroll-left.gif \
js/ext-3.0.0/resources/images/default/tabs/scroll-right.gif \
js/ext-3.0.0/resources/images/default/tabs/scroller-bg.gif \
js/ext-3.0.0/resources/images/default/tabs/tab-btm-inactive-left-bg.gif \
js/ext-3.0.0/resources/images/default/tabs/tab-btm-inactive-right-bg.gif \
js/ext-3.0.0/resources/images/default/tabs/tab-btm-left-bg.gif \
js/ext-3.0.0/resources/images/default/tabs/tab-btm-right-bg.gif \
js/ext-3.0.0/resources/images/default/tabs/tab-close.gif \
js/ext-3.0.0/resources/images/default/tabs/tab-strip-bg.gif \
js/ext-3.0.0/resources/images/default/tabs/tab-strip-bg.png \
js/ext-3.0.0/resources/images/default/tabs/tab-strip-btm-bg.gif \
js/ext-3.0.0/resources/images/default/tabs/tabs-sprite.gif \
js/ext-3.0.0/resources/images/default/toolbar/bg.gif \
js/ext-3.0.0/resources/images/default/toolbar/btn-arrow-light.gif \
js/ext-3.0.0/resources/images/default/toolbar/btn-arrow.gif \
js/ext-3.0.0/resources/images/default/toolbar/btn-over-bg.gif \
js/ext-3.0.0/resources/images/default/toolbar/gray-bg.gif \
js/ext-3.0.0/resources/images/default/toolbar/more.gif \
js/ext-3.0.0/resources/images/default/toolbar/tb-bg.gif \
js/ext-3.0.0/resources/images/default/toolbar/tb-btn-sprite.gif \
js/ext-3.0.0/resources/images/default/toolbar/tb-xl-btn-sprite.gif \
js/ext-3.0.0/resources/images/default/toolbar/tb-xl-sep.gif \
js/ext-3.0.0/resources/images/default/tree/arrows.gif \
js/ext-3.0.0/resources/images/default/tree/drop-add.gif \
js/ext-3.0.0/resources/images/default/tree/drop-between.gif \
js/ext-3.0.0/resources/images/default/tree/drop-no.gif \
js/ext-3.0.0/resources/images/default/tree/drop-over.gif \
js/ext-3.0.0/resources/images/default/tree/drop-under.gif \
js/ext-3.0.0/resources/images/default/tree/drop-yes.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-end-minus-nl.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-end-minus.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-end-plus-nl.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-end-plus.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-end.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-line.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-minus-nl.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-minus.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-plus-nl.gif \
js/ext-3.0.0/resources/images/default/tree/elbow-plus.gif \
js/ext-3.0.0/resources/images/default/tree/elbow.gif \
js/ext-3.0.0/resources/images/default/tree/folder-open.gif \
js/ext-3.0.0/resources/images/default/tree/folder.gif \
js/ext-3.0.0/resources/images/default/tree/leaf.gif \
js/ext-3.0.0/resources/images/default/tree/loading.gif \
js/ext-3.0.0/resources/images/default/tree/s.gif \
js/ext-3.0.0/resources/images/default/window/icon-error.gif \
js/ext-3.0.0/resources/images/default/window/icon-info.gif \
js/ext-3.0.0/resources/images/default/window/icon-question.gif \
js/ext-3.0.0/resources/images/default/window/icon-warning.gif \
js/ext-3.0.0/resources/images/default/window/left-corners.png \
js/ext-3.0.0/resources/images/default/window/left-corners.psd \
js/ext-3.0.0/resources/images/default/window/left-right.png \
js/ext-3.0.0/resources/images/default/window/left-right.psd \
js/ext-3.0.0/resources/images/default/window/right-corners.png \
js/ext-3.0.0/resources/images/default/window/right-corners.psd \
js/ext-3.0.0/resources/images/default/window/top-bottom.png \
js/ext-3.0.0/resources/images/default/window/top-bottom.psd \
js/jquery/jquery-1.3.2.min.js \
js/jquery/jquery-ui-1.7.min.js \
js/jquery/jquery.getUrlParam.js \
js/dbrelay-core-min.js \
js/dbrelay-ui-all-min.js \
js/dbrelay-ui-sqltableeditor-min.js \
js/dbrelay-ui-sqlresultpanel-min.js \
tablesorter/asc.png \
tablesorter/bg.png \
tablesorter/desc.png \
tablesorter/jquery.tablesorter.min.js \
tablesorter/style.css

install-data-local:
	for f in $(FILES) ; do \
	d=`echo $$f | sed -e 's,/[^/]*$$,,'`; \
	$(mkinstalldirs) $(DESTDIR)$(htmldir)/$$d; \
	$(INSTALL_DATA) $$f $(DESTDIR)$(htmldir)/$$f; \
	echo $$f $$d; \
	done


